[package]
name = "microfiber"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda-extension = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
opentelemetry = { version = "0.25" }
opentelemetry_sdk = { version = "0.25", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.25", features = [
    "http-proto",
    "reqwest-client",
] }
tracing = "0.1"
tracing-opentelemetry = "0.19"
async-trait = "0.1"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
